Targets Functionality complete

--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
   },
   "homepage": "https://github.com/JoelSaleem/macro-tracker#readme",
   "dependencies": {
-    "next": "^9.2.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "@types/styled-components": "^5.0.1",
+    "core-js": "^3.6.4",
+    "next": "^9.2.2",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
+    "styled-components": "^5.0.1"
   },
   "devDependencies": {
     "@types/node": "^13.7.0",
