--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node server.js",
-    "start": "NODE_ENV=production node server.js",
+    "dev": "next dev",
+    "start": "next start",
     "build": "next build"
   },
   "repository": {
@@ -24,7 +24,9 @@
     "@types/styled-components": "^5.0.1",
     "@zeit/next-typescript": "^1.1.1",
     "core-js": "^3.6.4",
+    "cross-env": "^7.0.2",
     "next": "^9.2.2",
+    "next-pwa": "^2.3.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "styled-components": "^5.0.1"
